--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-  <meta charset="utf-8">
-  <title>Project Starter</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="./stylesheets/main.scss">
-</head>
+  <head>
+    <meta charset="utf-8">
+    <title>Project Starter</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="./stylesheets/main.scss">
+    <link rel="stylesheet" 
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  </head>
 
-<body>
-  <!--  Your HTML goes here-->
-  <h1>Welcome to WEB 2620!!!!!</h1>
-<script type="module" src="./javascripts/main.js"></script>
-</body>
+  <body>
+    <!--  Your HTML goes here-->
+
+    <!--  Header -->
+    <header>
+      <p>
+        <span class="title">My Blog</span>
+        <span class="bars"><i class="fa fa-bars"></i></span>
+        <span class="searchBar">Type to search</span>
+      </p>
+    </header>
+
+    <!-- Navigation Bar -->
+    <nav>
+      <a href="#">Home</a> |
+      <a href="#">Recent posts</a> |
+      <a href="#">Old posts</a> |
+      <a href="#">Contact us</a> |
+      <a href="#">About us</a>
+    </nav>
+
+    <!-- Main Content -->
+    <main>
+      <!-- First Image & Information -->
+      <div class="firstArticle clearfix">
+        <div class="image">
+          <img src="images/Lollipops.jpg">
+        </div>
+        <div class="information">
+          <p>
+            <span class="mainTitle">First post with image</span>
+            <br>
+            <span class="firstLine">
+              <span class="author">By Adam Smith</span><span class="semicolon">;</span>
+              <span class="date">
+                <span class="wordOn">On</span> January 1, 20<span class="numberEighteen">18</span><span class="numberTwenty">20</span>
+              </span>
+            </span>
+            <br>
+            <span class="plainText">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor 
+              incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
+              exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute 
+              irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla 
+              pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia 
+              deserunt mollit anim id est laborum.
+              <br>
+              <span class="secondPart">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor 
+                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
+                exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute 
+                irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                <br>
+              </span>
+            </span>
+          </p>
+          <div class="mainButton">
+            <span class="mainButtonText">Read more</span>
+          </div>
+        </div>
+      </div>
+
+      <!-- Second Image & Information -->
+      <div class="secondArticle clearfix">
+        <div class="image">
+          <img src="images/Marshmallows.jpg">
+        </div>
+        <div class="information">
+          <p>
+            <span class="mainTitle">Second post with image</span>
+            <br>
+            <span class="firstLine">
+              <span class="author">By John Doe</span>
+              <span class="semicolon">;</span>
+              <span class="date">
+                <span class="wordOn">On</span> January 1, 20<span class="numberEighteen">18</span><span class="numberTwenty">20</span>
+              </span>
+            </span>
+            <br>
+            <span class="plainText">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor 
+              incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
+              exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute 
+              irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla 
+              pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia 
+              deserunt mollit anim id est laborum.
+              <br>
+              <span class="secondPart">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor 
+                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
+                exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute 
+                irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                <br>
+              </span>
+            </span>
+          </p>
+          <div class="mainButton">
+            <span class="mainButtonText">Read more</span>
+          </div>
+        </div>
+      </div>
+    </main>
+
+    <!-- Page Tab -->
+    <div class="pageTab">
+      <p>
+        <span class="buttonLeft">Prev</span>
+        <span class="fraction">1/4</span>
+        <span class="buttonRight">Next</span>
+      </p>
+    </div>
+    
+    <!-- Footer -->
+    <footer>
+      <p>
+        <span class="links">
+          Facebook
+          <span class="middleLink">Twitter</span>
+          Google+
+        </span>
+        <span class="last">&copy; All Rights Reserved</span>
+      </p>
+    </footer>
+    <script type="module" src="./javascripts/main.js"></script>
+  </body>
 </html>
